Fix oversized banner on mobile

--- a/css/shared.css
+++ b/css/shared.css
@@ -62,6 +62,12 @@ td {
 	width: 100%;
     z-index: 1;
 }
+.logo {
+    width: 50%;
+}
+.banner {
+    width: 75%;
+}
 .header ul {
 	margin: 0;
 	padding: 0;
@@ -234,6 +240,9 @@ td {
 	.header li {
 		float: left;
 	}
+    .logo, .banner {
+        width: initial;
+    }
 	.header .menu, .header .languages {
 		clear: none;
 		float: right;
